- imlement swagger- add swagger-ui-express - create swagger.json file